<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_95">
        <Button
            android:background="@null"
            android:id="@+id/tv_cancel_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"/>

        <Button
            android:background="@null"
            android:id="@+id/tv_finish_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:text="@string/finish"
            android:textColor="@color/btn_finish_red_color"/>
        <TextView
            android:id="@+id/tv_title_modify"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/qb_px_32"
            android:text="@string/setting_sign"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@drawable/shadow_line"/>
    <FrameLayout
        android:id="@+id/fl_container_modify"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</LinearLayout>