<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_oder_dialog"
              android:orientation="vertical">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_90">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_title"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/qb_px_32"/>
        <Button
            android:id="@+id/btn_close"
            android:layout_width="@dimen/qb_px_30"
            android:layout_height="@dimen/qb_px_30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/qb_px_32"
            android:background="@mipmap/close_no_bg"/>
        <View
            style="@style/horizontal_line"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <!--订单信息-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_162"
        android:layout_marginEnd="@dimen/qb_px_32"
        android:layout_marginStart="@dimen/qb_px_32">
        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/qb_px_25"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/qb_px_32"
            tools:text="¥29.00"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/qb_px_106"
            android:text="@string/order_info_title"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/qb_px_26"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_106"
            android:text="@string/order_info"
            android:textColor="@color/colorText6"
            android:textSize="@dimen/qb_px_26"/>
        <View
            style="@style/horizontal_line"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/qb_px_32"/>
    </RelativeLayout>
    <!--付款方式-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_84"
        android:layout_marginEnd="@dimen/qb_px_32"
        android:layout_marginStart="@dimen/qb_px_32">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/order_pay"
            android:textColor="@color/colorText6"
            android:textSize="@dimen/qb_px_26"/>
        <TextView
            android:id="@+id/tv_sel_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableEnd="@mipmap/spinner_back"
            android:drawablePadding="@dimen/qb_px_28"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/qb_px_12"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingTop="@dimen/qb_px_12"
            android:text="彩币"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/qb_px_26"/>
        <View
            style="@style/horizontal_line"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <!--红包-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_84"
        android:layout_marginEnd="@dimen/qb_px_32"
        android:layout_marginStart="@dimen/qb_px_32">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/order_red_money"
            android:textColor="@color/colorText6"
            android:textSize="@dimen/qb_px_26"/>
        <TextView
            android:id="@+id/tv_sel_red_pocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableEnd="@mipmap/spinner_back"
            android:drawablePadding="@dimen/qb_px_28"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/qb_px_12"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingTop="@dimen/qb_px_12"
            android:textColor="@color/common_red"
            android:textSize="@dimen/qb_px_26"
            tools:text="暂无可用红包"/>
        <View
            style="@style/horizontal_line"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_pay_right_now"
        style="@style/confirm_btn_style"
        android:layout_marginBottom="@dimen/qb_px_40"
        android:layout_marginTop="@dimen/qb_px_57"
        android:text="@string/pay_right_now"/>
</LinearLayout>